# gba_mobile

gba_mobile/: Cargo.toml
gba_mobile/src/: generation.rs  lib.rs  pending.rs  timer.rs
gba_mobile/src/arrayvec/: error.rs  mod.rs
gba_mobile/src/config/: format.rs  mod.rs
gba_mobile/src/config/mobile_system_gb/: error.rs  mod.rs  phone_number.rs  registration.rs  segments.rs  slot.rs
gba_mobile/src/connection/: error.rs  mod.rs  pending.rs
gba_mobile/src/connection/error/: io.rs  mod.rs
gba_mobile/src/digit/: mod.rs  pair.rs
gba_mobile/src/digit/into_digits/: ipv4addr.rs  mod.rs  slice.rs
gba_mobile/src/dns/: error.rs  mod.rs  pending.rs  to_name.rs
gba_mobile/src/driver/: adapter.rs  frames.rs  mod.rs  source.rs  timers.rs
gba_mobile/src/driver/active/: call.rs  end_link.rs  linked.rs  linking.rs  mod.rs  queue.rs  recover_link.rs  reset_link.rs  socket.rs  timeout.rs  waiting_for_call.rs
gba_mobile/src/driver/command/: mod.rs
gba_mobile/src/driver/error/: close_link.rs  config.rs  connection.rs  connection_io.rs  dns.rs  link.rs  (+5 more)
gba_mobile/src/engine/: adapter.rs  error.rs  mod.rs  source.rs
gba_mobile/src/internet/: mod.rs  pending.rs
gba_mobile/src/link/: connection.rs  error.rs  mod.rs  pending.rs
gba_mobile/src/link_p2p/: error.rs  mod.rs  pending.rs
gba_mobile/src/mmio/: interrupt.rs  mod.rs  serial.rs  timer.rs
gba_mobile/src/p2p/: error.rs  mod.rs  pending.rs
gba_mobile/src/phone_number/: mod.rs
gba_mobile/src/ppp/: mod.rs  pending.rs
gba_mobile/src/socket/: buffer.rs  error.rs  mod.rs  pending.rs  slot.rs  to_socket.rs
(+251 files in other folders)
