[package]
name = "gba_mobile"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
lto = true

[dependencies]
either = {version = "1.15.0", default-features = false}

[dev-dependencies]
claims = "0.8.0"
gba_test = {version = "0.5.0", features = ["log"]}
mgba_log = "0.2.1"
